<resources>
    <string name="app_name">Lego Collection</string>
    <string name="btn_web">Web</string>
    <string name="btn_detail">Detail</string>
    <string name="title_highlight">Highlight Items</string>
    <string name="title_all_items">All Collections</string>
    <string name="label_year">Year:</string>
    <string name="label_theme">Theme:</string>
    <string name="title_language">Change Language</string>
</resources>